# sitas

./: .gitignore  AGENTS.md  Cargo.toml  INSTRUCTION.md  README.md  SITAS-STATUS.md
crates/sitas/: Cargo.toml
crates/sitas-core/: Cargo.toml
crates/sitas-core/src/: async_service.rs  backpressure.rs  basic_kv.rs  charlotte_abi.rs  counter.rs  counters.rs  current.rs  error.rs  future.rs  instant.rs  io.rs  io_interest.rs  join.rs  kv.rs  kv_service.rs  lib.rs  metrics.rs  os.rs  placement.rs  reactor_backend.rs  ringbuf.rs  root.rs  running_stats.rs  runtime.rs  scheduler.rs  scheduling_group.rs  scope.rs  shard_executor.rs  shard_local.rs  shard_mailbox.rs  shard_runtime.rs  sharded.rs  sharded_executor.rs  sharded_tcp.rs  snapshot.rs  spawner.rs  stream_reply.rs  sync.rs  task.rs  task_set.rs  (+6 more)
crates/sitas/examples/: async_connect.rs  async_copy.rs  async_tcp_echo.rs  async_tcp_idle_server.rs  async_tcp_idle_server_timeout.rs  async_tcp_multi_echo.rs  async_tcp_pair.rs  async_tcp_scoped_server.rs  async_tcp_stoppable_server.rs  async_tcp_timeout.rs  async_write.rs  basic_kv.rs  executor_race.rs  executor_task_scope.rs  os_reactor.rs  os_readable.rs  os_uring.rs  os_uring_abandon.rs  os_uring_batch.rs  shard_local_current.rs  shard_local_stoppable_workers.rs  shard_local_worker_observability.rs  shard_local_workers.rs  sharded_cpu_placement.rs  sharded_executor.rs  sharded_index_build.rs  sharded_index_build_uring.rs  sharded_index_mailbox.rs  sharded_observability.rs
crates/sitas/src/: lib.rs
crates/sitas/tests/: counter_tests.rs  placement_tests.rs
src/: kv.rs  (+19 more)
(+130 files in other folders)
