[package]
name = "sitas-core"
version = "0.1.0"
edition = "2024"
description = "sitas shard-per-core runtime core (no_std + alloc)"
license = "MIT"
repository = "https://github.com/FrodeRanders/sitas"

[dependencies]
spin = "0.9"
# concurrent-queue requires std; we provide a no_std SPSC ring buffer internally.
