[package]
name = "sitas"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A small Rust library for shard-local ownership and typed message passing."
repository = "https://github.com/FrodeRanders/sitas"
readme = "../../README.md"
license = "Apache-2.0"

[dependencies]
sitas-core = { path = "../sitas-core", features = ["std"] }
